--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,6 @@ services:
     volumes:
       - ./:/app
     working_dir: /app
-    command: dotnet watch
+    command: dotnet watch run --AlwaysRestartOnRudeEdit
     ports:
       - "5242:80"
